Project

General

Profile

Actions

Bug #24174

closed

PrimaryLogPG::try_flush_mark_clean mixplaced ctx release

Added by Sage Weil almost 6 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

   -40> 2018-05-17 17:12:11.785 7fcdd29b1700 10 osd.3 pg_epoch: 40 pg[3.2( v 40'129 (0'0,40'129] local-lis/les=39/40 n=45 ec=19/19 lis/c 39/30 les/c/f 40/31/0 38/39/19) [3,5,6]/[3,5] async=[6] r=0 lpr=39 pi=[30,39)/1 luod=40'127 rops=10 crt=40'129 lcod 40'126 mlcod 28'2 active+recovering+undersized+remapped mbc={25
5={(2+1)=41}}] try_flush_mark_clean waiting on write lock 0x5599ca181800 0x5599cafe3180
     0> 2018-05-17 17:12:11.785 7fcdd29b1700 -1 *** Caught signal (Segmentation fault) **
 in thread 7fcdd29b1700 thread_name:finisher

 ceph version 13.1.0-136-ge56bf73 (e56bf73c94568cfc33a33047a7081164aade841a) mimic (rc)
 1: (()+0x9131f0) [0x5599c546f1f0]
 2: (()+0x11390) [0x7fcdf47f5390]
 3: (std::_Rb_tree<hobject_t, std::pair<hobject_t const, ObcLockManager::ObjectLockState>, std::_Select1st<std::pair<hobject_t const, ObcLockManager::ObjectLockState> >, std::less<hobject_t>, std::allocator<std::pair<hobject_t const, ObcLockManager::ObjectLockState> > >::find(hobject_t const&)+0x14) [0x5599c50d70e4]
 4: (ObcLockManager::get_lock_type(ObjectContext::RWState::State, hobject_t const&, std::shared_ptr<ObjectContext>&, boost::intrusive_ptr<OpRequest>&)+0x3d) [0x5599c50d730d]
 5: (PrimaryLogPG::try_flush_mark_clean(std::shared_ptr<PrimaryLogPG::FlushOp>)+0x702) [0x5599c5091012]
 6: (PrimaryLogPG::finish_flush(hobject_t, unsigned long, int)+0x30d) [0x5599c5091f3d]
 7: (C_Flush::finish(int)+0xb9) [0x5599c5103e39]
 8: (Context::complete(int)+0x9) [0x5599c4f4d009]
 9: (Finisher::finisher_thread_entry()+0x12e) [0x7fcdf5d3e05e]

/a/sage-2018-05-17_13:38:58-rados-wip-sage2-testing-2018-05-17-0701-distro-basic-smithi/2543988

Related issues 2 (0 open2 closed)

Related to RADOS - Bug #24148: Segmentation fault out of ObcLockManager::get_lock_type()Duplicate05/16/2018

Actions
Copied to RADOS - Backport #24200: mimic: PrimaryLogPG::try_flush_mark_clean mixplaced ctx releaseResolvedActions
Actions #2

Updated by Sage Weil almost 6 years ago

  • Priority changed from Normal to Urgent
Actions #3

Updated by Kefu Chai almost 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Nathan Cutler almost 6 years ago

  • Copied to Backport #24200: mimic: PrimaryLogPG::try_flush_mark_clean mixplaced ctx release added
Actions #6

Updated by Neha Ojha over 5 years ago

This was seen in luminous. Could this be related?

2018-08-04T20:57:47.647 INFO:tasks.ceph.osd.0.smithi085.stderr:*** Caught signal (Segmentation fault) **
2018-08-04T20:57:47.647 INFO:tasks.ceph.osd.0.smithi085.stderr: in thread 7f7080cfe700 thread_name:fn_anonymous
2018-08-04T20:57:47.651 INFO:tasks.ceph.osd.0.smithi085.stderr: ceph version 12.2.7-16-ge71995b (e71995b05a3f2c460433df1e87513fe8ab4a6125) luminous (stable)
2018-08-04T20:57:47.651 INFO:tasks.ceph.osd.0.smithi085.stderr: 1: (()+0xa851a4) [0x55c35e0181a4]
2018-08-04T20:57:47.651 INFO:tasks.ceph.osd.0.smithi085.stderr: 2: (()+0x11390) [0x7f709d653390]
2018-08-04T20:57:47.652 INFO:tasks.ceph.osd.0.smithi085.stderr: 3: (std::_Rb_tree<hobject_t, std::pair<hobject_t const, ObcLockManager::ObjectLockState>, std::_Select1st<std::pair<hobject_t const, ObcLockManager::ObjectLockState> >, std::less<hobject_t>, std::allocator<std::pair<hobject_t const, ObcLockManager::ObjectLockState> > >::find(hobject_t const&)+0x14) [0x55c35dc3c814]
2018-08-04T20:57:47.652 INFO:tasks.ceph.osd.0.smithi085.stderr: 4: (ObcLockManager::get_lock_type(ObjectContext::RWState::State, hobject_t const&, std::shared_ptr<ObjectContext>, boost::intrusive_ptr<OpRequest>)+0x3a) [0x55c35dc3ca1a]
2018-08-04T20:57:47.652 INFO:tasks.ceph.osd.0.smithi085.stderr: 5: (PrimaryLogPG::try_flush_mark_clean(std::shared_ptr<PrimaryLogPG::FlushOp>)+0x37c) [0x55c35dbed28c]
2018-08-04T20:57:47.652 INFO:tasks.ceph.osd.0.smithi085.stderr: 6: (PrimaryLogPG::finish_flush(hobject_t, unsigned long, int)+0x29a) [0x55c35dbf270a]
2018-08-04T20:57:47.652 INFO:tasks.ceph.osd.0.smithi085.stderr: 7: (C_Flush::finish(int)+0xb8) [0x55c35dc68998]
2018-08-04T20:57:47.652 INFO:tasks.ceph.osd.0.smithi085.stderr: 8: (Context::complete(int)+0x9) [0x55c35da8d999]
2018-08-04T20:57:47.652 INFO:tasks.ceph.osd.0.smithi085.stderr: 9: (Finisher::finisher_thread_entry()+0x460) [0x55c35e059610]
2018-08-04T20:57:47.652 INFO:tasks.ceph.osd.0.smithi085.stderr: 10: (()+0x76ba) [0x7f709d6496ba]
2018-08-04T20:57:47.652 INFO:tasks.ceph.osd.0.smithi085.stderr: 11: (clone()+0x6d) [0x7f709c6c041d]

/a/nojha-2018-08-04_20:35:11-rados-wip-test-24988-luminous-distro-basic-smithi/2865516/

Actions #7

Updated by Greg Farnum over 4 years ago

  • Related to Bug #24148: Segmentation fault out of ObcLockManager::get_lock_type() added
Actions #8

Updated by David Zafman over 4 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF